openmediavault (7.4.4-1) stable; urgency=low

  * Issue #1635: Switch to `@siemens/ngx-datatable` component.
  * Issue #1799: Do not use a login shell in the cron script
    `openmediavault-update-smart-drivedb`.
  * Issue #1801: Support requesting multiple files from a remote
    host, e.g. `user@host:/dir1 :/dir2 :/dir3`, in rsync jobs.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 25 Jul 2024 11:37:57 +0200

openmediavault (7.4.3-1) stable; urgency=low

  * Make sure the Armbian default netplan configuration file
    does not break our netplan configuration.
  * Make the system accessible again via mDNS/Zeroconf after
    changing the system's hostname.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 23 Jul 2024 19:40:18 +0200

openmediavault (7.4.2-2) stable; urgency=low

  * Make sure security packages are not hold back on several Debian
    derivatives. Remove the "APT::Default-Release" setting from all
    APT configuration files.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 20 Jul 2024 15:52:13 +0200

openmediavault (7.4.1-3) stable; urgency=low

  * Make sure security packages are not hold back on several Debian
    derivatives.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 14 Jul 2024 10:50:41 +0200

openmediavault (7.4.0-2) stable; urgency=low

  * Add StorageDeviceInterface::isHotPluggable() method.
  * Add `Diagnostics | Services | NFS` page.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jul 2024 21:49:41 +0200

openmediavault (7.3.1-1) stable; urgency=low

  * Update locale files.
  * Fix the error of automatic reloading of several dashboard widgets,
    e.g. the system time widget.
  * Fixed a bug in unattended-upgrades that causes all new packages to
    be installed instead of just security updates.
  * Hardening of the quota Salt state to cope with situations where
    there are multiple mount points for a device.